--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,7 +233,7 @@
     <string name="created_your_account">Created your account</string>
     <string name="deleteaccount">Delete your account</string>
     <string name="forget_password">Forget your password</string>
-    <string name="reset_password">パスワードリセットしますか？</string>
+    <string name="reset_password">Reset your password?</string>
     <string name="sent_reset_mail">Sent a password reset mail</string>
     <string name="failed_to_sent_reset_mail">Failed to send a password reset mail</string>
     <string name="failed_to_creat_account">Failed to create your account</string>
@@ -247,5 +247,10 @@
     <string name="auth_failed">Authentication failed</string>
     <string name="auth_successed">Authentication successed</string>
     <string name="auth_mail_check">Check an authentication mail</string>
-
+    <string name="save_data_to_server">Save data to server</string>
+    <string name="successed_to_save_data">Successed to save data</string>
+    <string name="failed_to_save_data">Failed to save data</string>
+    <string name="get_data_from_server">Get data from server</string>
+    <string name="successed_to_get_data">Successed to get data</string>
+    <string name="failed_to_get_data">Failed to get data</string>
 </resources>
